# cosmOS-rv1106

./: .BoardConfig.mk  .gitignore  .gitmodules  .vscode-ctags  Makefile  README.md  S20linkmount  build.sh  builder.sh  checker.sh  cosmOSbuilder.sh  out.dts  sd-card-burner.sh  setup-script.sh
board/: luckfox_pico_defconfig
boardconfig/: BoardConfig-SD_CARD-Buildroot-RV1106_Luckfox_Pico_Max-IPC.mk  BoardConfig-SD_CARD-Buildroot-RV1106_Luckfox_Pico_Pro-IPC.mk
config/: dts_config
cosmOS_custom_daemons/transferd/: transferd.c
cosmOS_custom_daemons/transferd/include/: transferd.h
cosmOS_custom_daemons/transferd/include/sources/: source.h
cosmOS_custom_daemons/transferd/include/targets/: target.h
cosmOS_custom_daemons/transferd/src/: daemon.c  log.c  transferd.c
cosmOS_developer_space/: build_and_deploy.sh  overlay_folder  workspacevs-code.code-workspace
cosmOS_developer_space/transferd/: CMakeLists.txt  Makefile  build.sh  build_and_deploy.sh  transferd
cosmOS_developer_space/transferd/include/: font.h  transferd.h
cosmOS_developer_space/transferd/src/: api.c  config.c  daemon.c  font.c  log.c  screen.c  temp.c  transferd.c
cosmOS_developer_space/yolo/: CMakeLists.txt  build.sh
cosmOS_developer_space/yolo/example/luckfox_pico_rtsp_yolov5/src/: main.cc
cosmOS_developer_space/yolo/install/uclibc/YOLO/: YOLO
cosmOS_developer_space/yolo/install/uclibc/luckfox_pico_rtsp_yolov5_demo/: luckfox_pico_rtsp_yolov5
cosmOS_kernel_patches/: fiq_debugger.c  luckfox_rv1106_linux_defconfig  rv1106_defconfig
kernel/arch/arm/boot/dts/: Makefile  rockchip-pinconf.dtsi  rv1106-evb.dtsi  rv1106-pinctrl.dtsi  rv1106.dtsi  rv1106g-luckfox-pico-pro.dts
kernel/arch/arm/configs/: rv1106_defconfig
kernel/include/dt-bindings/clock/: rv1106-cru.h
kernel/include/dt-bindings/gpio/: gpio.h
kernel/include/dt-bindings/pinctrl/: rockchip.h
kernel/include/uapi/linux/: input-event-codes.h
media/: Makefile
project/app/: Makefile  Makefile.param
project/app/rkipc/rkipc/src/rv1106_ipc/: RkLunch.sh
project/cfg/BoardConfig_IPC/overlay/overlay-luckfox-buildroot-init/etc/: motd  profile
project/cfg/BoardConfig_IPC/overlay/overlay-luckfox-buildroot-shadow/etc/: shadow
sysdrv/: Makefile  Makefile.old  Makefile.param
sysdrv/cfg/: cfg.mk  package.mk
sysdrv/source/kernel/arch/arm/configs/: luckfox_rv1106_linux_tb_defconfig
sysdrv/tools/board/: Makefile.tools.board.mk
sysdrv/tools/board/buildroot/: luckfox_pico_defconfig  luckfox_pico_w_defconfig
sysdrv/tools/board/e2fsprogs/e2fsprogs-1.43.9/misc/: e4crypt
sysdrv/tools/board/eudev/eudev-3.2.7/: Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  libtool
sysdrv/tools/board/eudev/eudev-3.2.7/hwdb/: Makefile  Makefile.in
sysdrv/tools/board/eudev/eudev-3.2.7/man/: Makefile  Makefile.in  udev.7  udev.conf.5  udevadm.8  udevd.8
sysdrv/tools/board/eudev/eudev-3.2.7/rule_generator/: Makefile  Makefile.in
sysdrv/tools/board/eudev/eudev-3.2.7/rules/: Makefile  Makefile.in
sysdrv/tools/board/eudev/eudev-3.2.7/src/: Makefile  Makefile.in
sysdrv/tools/board/eudev/eudev-3.2.7/test/: Makefile  Makefile.in  test-libudev  test-udev
sysdrv/tools/board/eudev/kmod-29/: Makefile  config.h  config.status  libtool
sysdrv/tools/board/eudev/kmod-29/libkmod/: libkmod-internal.la  libkmod.la  libkmod.pc
sysdrv/tools/board/eudev/kmod-29/man/: Makefile
sysdrv/tools/board/eudev/kmod-29/shared/: libshared.la
sysdrv/tools/board/eudev/util-linux-2.37.2/: Makefile  config.status  libblkid.la  libcommon.la  libtool
sysdrv/tools/board/eudev/util-linux-2.37.2/.libs/: libblkid.lai
sysdrv/tools/board/eudev/util-linux-2.37.2/libblkid/: blkid.pc
sysdrv/tools/board/eudev/util-linux-2.37.2/po/: Makefile  Makefile.in
sysdrv/tools/board/eudev/util-linux-2.37.2/po-man/: Makefile
sysdrv/tools/board/gdb/expat-2.4.1/: Makefile  config.status  expat.pc  libtool
sysdrv/tools/board/gdb/expat-2.4.1/doc/: Makefile
sysdrv/tools/board/gdb/expat-2.4.1/examples/: Makefile  elements  outline
sysdrv/tools/board/gdb/expat-2.4.1/lib/: Makefile  libexpat.la
sysdrv/tools/board/gdb/expat-2.4.1/tests/: Makefile
sysdrv/tools/board/gdb/expat-2.4.1/xmlwf/: Makefile  xmlwf
sysdrv/tools/board/gdb/gdb-10.2/: Makefile  config.status
sysdrv/tools/board/gdb/gdb-10.2/bfd/: Makefile  config.cache  config.status  libbfd.la  libtool
sysdrv/tools/board/gdb/gdb-10.2/etc/: Makefile  config.status
sysdrv/tools/board/gdb/gdb-10.2/gdb/: config.cache  config.h  config.status
sysdrv/tools/board/gdb/gdb-10.2/gdbserver/: config.cache  config.status
sysdrv/tools/board/gdb/gdb-10.2/gdbsupport/: Makefile  config.cache  config.status
sysdrv/tools/board/gdb/gdb-10.2/gnulib/: Makefile  config.status
sysdrv/tools/board/gdb/gdb-10.2/intl/: Makefile  config.cache  config.status
sysdrv/tools/board/gdb/gdb-10.2/libctf/: Makefile  config.cache  config.status  libctf-nobfd.la  libctf.la  libtool
sysdrv/tools/board/gdb/gdb-10.2/libdecnumber/: Makefile  config.status
sysdrv/tools/board/gdb/gdb-10.2/libiberty/: Makefile  config.status
sysdrv/tools/board/gdb/gdb-10.2/opcodes/: Makefile  config.cache  config.status  libopcodes.la  libtool
sysdrv/tools/board/gdb/gdb-10.2/readline/: Makefile
sysdrv/tools/board/gdb/gdb-10.2/zlib/: Makefile  config.cache  config.status  libtool
sysdrv/tools/board/memtester/memtester-4.6.0/: systype
sysdrv/tools/board/mtd-utils/mtd-utils-2.0.1/: Makefile  config.status  doc_loadbios  docfdisk  flash_erase  flash_lock  flash_otp_dump  flash_otp_info  flash_otp_lock  flash_otp_write  flash_unlock  flashcp  ftl_check  ftl_format  libtool  mtd_debug  mtdinfo  mtdpart  nanddump  nandtest  nandwrite  nftl_format  nftldump  recv_image  rfddump  rfdformat  serve_image  ubiattach  ubiblock  ubicrc32  ubidetach  ubiformat  ubimkvol  ubinfo  ubinize  ubirename  ubirmvol  ubirsvol  ubiupdatevol
sysdrv/tools/board/stressapptest/stressapptest-master/: Makefile  config.status
sysdrv/tools/board/stressapptest/stressapptest-master/src/: Makefile  findmask  stressapptest  stressapptest_config.h
(+288 files in other folders)
